# PaperForge

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: pinecone-tester.agent.md
app/: chunking.py  db.py  embedding.py  extraction.py  extraction_final.py  extraction_robust.py  main.py  model.py  requirements.txt  test.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/auth/callback/: route.ts
frontend/app/api/auth/callback_github/: route.ts
frontend/app/api/auth/callback_google/: route.ts
frontend/app/api/auth/github/: route.ts
frontend/app/api/auth/google/: route.ts
frontend/app/console/: page.tsx
frontend/app/signin/: page.tsx
frontend/components/: Coloredhline.tsx  CommandCenter.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx  Providers.tsx  SigninButton.tsx  SignupCard.tsx  SignupFooter.tsx  SocialLoginIcons.tsx
frontend/components/console/: Canvas.tsx  DocumentViewer.tsx  FloatingInputBar.tsx  Sidebar.tsx  Tile.tsx
respackage/: __init__.py  main.py  query.py  status.py
